--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "express": "~4.13.4",
     "influx": "^5.0.0-alpha.4",
     "jade": "~1.11.0",
+    "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "rrdtool": "^0.1.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
   }
 }
