--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-google-oauth": "^1.0.0",
     "passport-google-token": "^0.1.2",
     "rrdtool": "^0.1.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
