--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
     "debug": "~2.2.0",
     "ejs": "^2.5.3",
     "express": "~4.13.4",
+    "google-auth-library": "^0.10.0",
     "influx": "^5.0.0-alpha.4",
     "jade": "~1.11.0",
     "json2csv": "^3.7.3",
-    "jsonwebtoken": "^7.1.9",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "njwt": "^0.3.2",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-token": "^0.1.2",
     "rrdtool": "^0.1.0",
