--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "socket.io": "^1.7.3",
-    "socket.io-client": "^1.7.2"
+    "socket.io-client": "^1.7.2",
+    "jquery": "^3.2.1"
   }
 }
